- Exibicao de feeds cadastrado no menu lateral
- Bugfixes e melhorias no cadastro de feeds

HORAS TRABALHADAS: 12h

==========
06/04/2009
==========

- Bugfixes e melhorias no cadastro de feeds

HORAS TRABALHADAS: 2h

==========
07/04/2009
==========

- Inclusao de evento nos botoes que carregam um feed
- Ajustes no DB, tabela de itens de notícias
- Inclusao de método para listagem de notícias de um feed no controller Feed,
action "news"
- Bugfixes no cadastro de feeds
- Exibicao de items de feed no dashboard

HORAS TRABALHADAS: 7h

==========
08/04/2009
==========

- Ajustes nos models para reconhecimento de estrutura de dados (formatacao de
data, etc)
- Ajustes no cadastro de feeds
- Inclusao de script para gerenciamento de deteccao / publicacao de blogs no
backend

HORAS TRABALHADAS: 7h

==========
09/04/2009
==========

- Organizacao dos scripts no backend
- Ajustes no backend

HORAS TRABALHADAS: 4h

==========
10/04/2009
==========

- Ajustes no backend

HORAS TRABALHADAS: 2h

==========
11/04/2009
==========

- Ajuste no cadastro de blogs (passa a utilizar script blogclient do backend)
- Exibicao do description de um item de feed selecionado (dashboard)
- Melhorias na exibicao de um item de feed selecionado
- Alteracao no backend, inclusao de script para gerenciamento do aggregator

HORAS TRABALHADAS: 8h

==========
16/04/2009
==========

- Ajustes na exibição de feeds

HORAS TRABALHADAS: 2h

==========
19/04/2009
==========

- Ajustes no script aggregator do backend
- Inclusao de metodo no WebService frontend para obter feed a ser atualizado

HORAS TRABALHADAS: 4h

==========
20/04/2009
==========

- Inclusao de metodo no WebService frontend para atualizar feed
- Atualização do Python para 2.6.2
- Correcao de bug com timezone na atualizacao de feed

HORAS TRABALHADAS: 10h

==========
21/04/2009
==========

- Correcao de bug com timezone na atualizacao de feed
- Bugfixes
- Inclusao de metodo para inclusao de item no Queue

HORAS TRABALHADAS: 6h